style.css
* {
	box-sizing: border-box;
}

body {
	margin: 0;
	font-family: 'Play', sans-serif;
	color: #1a1a1a;
}

header {
	width: 100%;
	background-color: #ff7b40;
	background-image: linear-gradient(#ff7b40, #ff4f00);
	border-bottom: 5px solid #a63400;
}

#logo {
	width: 30%;
	margin: 2% 35% 2% 35%;
}

#logo img {
	width: 100%;
	height: 100%;
}

h1 {
	font-family:'Orbitron', sans-serif;
	text-align: center;
	font-size: 1.5em;
	text-shadow: 3px 3px 3px white;
	margin: 2%;
}

p {
	text-align: center;
	margin: 4%;
}

table {
	width: 100%;
	margin: 7% 0;
}
thead {
	background-color: #2b7930;
	font-family: 'PT Sans', sans-serif;
	font-size: 1.5em;
	font-style: italic;
	color: white;
}

tbody tr {
	background-color: #8cd290;
}

td {
	padding: 2% 1%;
}

footer {
	width: 100%;
	background-color: #ff7b40;
	background-image: linear-gradient(#ff4f00, #ff7b40);
	border-top: 5px solid #a63400;
	text-align: center;
	padding: 2% 0;
}

footer span {
	padding: 0 2%;
}

#footerimg {
	width: 30%;
	border: 1px solid black;
	margin: 2% 35% 2% 35%;
}

#footerimg  img {
	max-width: 100%;
	padding: 0;
}

@media screen and (min-width: 650px) {

	#logo {
		width: 15%;
		display: inline-block;
		margin-left: 2%;
		margin-right: 2%;
		clear: both;
	}

	h1 {
		font-size: 2em;
		float: right;
		margin-top: 10%;
	}

	p {
	clear: both;
	}

	footer span {
	font-size: 1.5em;
	}

	#footerimg {
	width: 20%;
	margin: 2% 40% 2% 40%;
	}


}

@media screen and (min-width: 980px) {

	h1 {
	font-size: 2.5em;
	}

	p {
		font-size: 1.25em;
	}

	table {
		width: 40%;
		margin: 3% 4% 3% 4%;
		display: inline-block;
		vertical-align: top;
	}

}

